cotizacion archivo en compra, cantidad minima y max en catalogo, nuevo endpoint de vista agrupada, ahora ya no hay jefe de area y supervisor puede hacer entregas, usuario ya no necesita trabajador